<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RestBaseConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Restmin"
        style="@style/NumberStyle"
        android:layout_marginStart="16dp"
        android:text="@string/zero"
        android:textAllCaps="false"
        android:textColor="@color/greyText"
        app:layout_constraintBottom_toBottomOf="@+id/Restdot"
        app:layout_constraintEnd_toStartOf="@+id/Restdot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Restdot" />

    <TextView
        android:id="@+id/Restsec"
        style="@style/NumberStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/zero"
        android:textColor="@color/greyText"
        app:layout_constraintBottom_toBottomOf="@+id/Restdot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Restdot"
        app:layout_constraintTop_toTopOf="@+id/Restdot" />

    <TextView
        android:id="@+id/Restdot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doubleDot"
        android:textColor="@color/greyText"
        android:textSize="@dimen/HalfTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minRest"
        style="@style/informationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintEnd_toEndOf="@+id/Restmin"
        app:layout_constraintStart_toStartOf="@+id/Restmin"
        app:layout_constraintTop_toBottomOf="@+id/Restmin" />

    <TextView
        android:id="@+id/secRest"
        style="@style/informationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        app:layout_constraintEnd_toEndOf="@+id/Restsec"
        app:layout_constraintStart_toStartOf="@+id/Restsec"
        app:layout_constraintTop_toBottomOf="@+id/Restsec" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/minRest"
        app:layout_constraintEnd_toStartOf="@+id/secRest"
        app:layout_constraintStart_toEndOf="@+id/minRest" />
</androidx.constraintlayout.widget.ConstraintLayout>