<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="showWorkPopUp"
    tools:context=".UI.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PortraitWorkTimerFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PortraitRestTimerFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/work_button_main"
        style="@style/buttonstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/work"
        app:layout_constraintBottom_toTopOf="@+id/PortraitRestTimerFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PortraitWorkTimerFragment" />

    <TextView
        android:id="@+id/SetInfo_main_text"
        style="@style/informationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="@+id/NumSet_main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/NumSet_main_text"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/NumSet_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/zero"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/work_button_main"
        app:layout_constraintEnd_toStartOf="@+id/work_button_main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SetInfo_main_text"
        app:layout_constraintTop_toTopOf="@+id/work_button_main"
        app:layout_constraintVertical_bias="0.468" />
</androidx.constraintlayout.widget.ConstraintLayout>